Unify content across all 3 styles using Industrial design wording
- Updated Minimalist and Luxury styles to use the same comprehensive content as Industrial
- Standardized all section headings, descriptions, and feature lists
- Maintained consistent messaging about Parkview Manor location and amenities
- All styles now have identical information with only visual presentation differences
- Added missing features like 2 Modern Bathrooms, Private Balcony, and Optional Cleaning Service
- Updated contact sections with Material Icons and consistent messaging
- Ensures all potential clients receive the same detailed property information

Content now includes:
- Complete apartment features (9 total)
- Detailed location benefits for healthcare professionals
- Comprehensive rental information with pricing
- Professional contact sections with clear benefits

--- a/style-c-luxury.html
+++ b/style-c-luxury.html
@@ -506,25 +506,25 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Sophisticated<br>Living</h1>
-            <p>Experience the finest in furnished accommodation at Parkview Manor</p>
-            <a href="#about" class="cta-button">Discover Excellence</a>
+            <h1>FULLY<br>FURNISHED</h1>
+            <p>Premium apartment at Parkview Manor, Parkview - 20 minutes to Chris Hani Baragwanath Hospital</p>
+            <a href="#about" class="cta-button">View Details</a>
         </div>
     </section>
 
     <!-- About Section -->
     <section id="about" class="section">
-        <h2 class="fade-in">Timeless Elegance</h2>
+        <h2 class="fade-in">FULLY FURNISHED APARTMENT</h2>
         <div class="elegant-grid">
             <div class="content-box fade-in">
-                <h3>Distinguished Address</h3>
-                <p>Nestled within the prestigious Parkview Manor, this exquisitely furnished residence represents the pinnacle of sophisticated living. Located merely 20 minutes from Chris Hani Baragwanath Academic Hospital, it offers unparalleled convenience for discerning professionals.</p>
-                <p>Every detail has been meticulously curated to create an atmosphere of refined luxury and comfort.</p>
+                <h3>Prime Parkview Location</h3>
+                <p>Located at Parkview Manor in the charming suburb of Parkview, this fully furnished apartment offers the perfect blend of comfort and convenience. Just 20 minutes to Chris Hani Baragwanath Academic Hospital with a stress-free commute against traffic both morning and afternoon.</p>
+                <p>The secure complex features 24-hour guard control, ensuring your peace of mind in this desirable first-floor unit.</p>
             </div>
             <div class="content-box fade-in">
-                <h3>Premium Amenities</h3>
-                <p>The residence features the finest furnishings, state-of-the-art appliances, and comprehensive security measures. Each space has been thoughtfully designed to provide both aesthetic pleasure and functional excellence.</p>
-                <p>This first-floor sanctuary offers tranquility while maintaining proximity to urban conveniences.</p>
+                <h3>Everything Included</h3>
+                <p>This thoughtfully furnished apartment comes with everything you need for comfortable living. From high-quality furniture to modern appliances, every detail has been considered to provide a premium living experience.</p>
+                <p>The stylish contemporary design features clean lines, premium finishes, and a sophisticated neutral palette that creates the perfect modern living environment.</p>
             </div>
         </div>
         <div class="luxury-stats fade-in">
@@ -538,18 +538,18 @@
             </div>
             <div class="luxury-stat">
                 <span class="number">24/7</span>
-                <span class="label">Concierge</span>
+                <span class="label">Security</span>
             </div>
             <div class="luxury-stat">
-                <span class="number">Premium</span>
-                <span class="label">Location</span>
+                <span class="number">1st</span>
+                <span class="label">Floor Unit</span>
             </div>
         </div>
     </section>
 
     <!-- Gallery Section -->
     <section id="gallery" class="section section-alt">
-        <h2 class="fade-in">Residence Gallery</h2>
+        <h2 class="fade-in">GALLERY</h2>
         <div class="gallery-grid">
             <div class="gallery-item fade-in">
                 <img src="Pics/PHOTO-2025-08-19-09-04-43.jpg" alt="Master Suite">
@@ -574,66 +574,87 @@
 
     <!-- Features Section -->
     <section id="features" class="section">
-        <h2 class="fade-in">Distinguished Features</h2>
+        <h2 class="fade-in">APARTMENT FEATURES</h2>
         <div class="features-showcase">
             <div class="feature-card fade-in">
                 <div class="feature-icon">
                     <span class="material-icons">security</span>
                 </div>
-                <h3>Concierge Security</h3>
-                <p>Round-the-clock professional security service ensuring absolute peace of mind</p>
+                <h3>24-Hour Security</h3>
+                <p>Secure complex with 24-hour guard control for complete peace of mind</p>
             </div>
             <div class="feature-card fade-in">
                 <div class="feature-icon">
                     <span class="material-icons">bed</span>
                 </div>
-                <h3>Luxury Suites</h3>
-                <p>Two beautifully appointed bedrooms with premium furnishings and bespoke storage</p>
+                <h3>2 Furnished Bedrooms</h3>
+                <p>Each with queen-sized beds and built-in cupboards, fully furnished and ready to move in</p>
             </div>
             <div class="feature-card fade-in">
                 <div class="feature-icon">
                     <span class="material-icons">restaurant</span>
                 </div>
-                <h3>Gourmet Kitchen</h3>
-                <p>Professional-grade appliances and elegant design for culinary excellence</p>
+                <h3>Fully Equipped Kitchen</h3>
+                <p>Oven, stove, microwave, air fryer, fridge, washing machine, and dishwasher included</p>
             </div>
             <div class="feature-card fade-in">
                 <div class="feature-icon">
                     <span class="material-icons">wifi</span>
                 </div>
-                <h3>Premium Connectivity</h3>
-                <p>High-speed unlimited internet service included for modern living needs</p>
+                <h3>Uncapped Wi-Fi Included</h3>
+                <p>High-speed internet connection included in rental - stay connected without extra costs</p>
             </div>
             <div class="feature-card fade-in">
                 <div class="feature-icon">
                     <span class="material-icons">garage</span>
                 </div>
-                <h3>Private Garage</h3>
-                <p>Covered parking bay with additional guest parking facilities</p>
+                <h3>Roofed Parking Bay</h3>
+                <p>One covered parking bay included plus ample visitor parking available</p>
             </div>
             <div class="feature-card fade-in">
                 <div class="feature-icon">
                     <span class="material-icons">power</span>
                 </div>
-                <h3>Uninterrupted Power</h3>
-                <p>Advanced backup power systems ensure continuous comfort</p>
+                <h3>Backup Power System</h3>
+                <p>Inverter backup power system ensures uninterrupted electricity supply</p>
+            </div>
+            <div class="feature-card fade-in">
+                <div class="feature-icon">
+                    <span class="material-icons">bathtub</span>
+                </div>
+                <h3>2 Modern Bathrooms</h3>
+                <p>One en-suite, one adjacent to second bedroom - both with contemporary fittings</p>
+            </div>
+            <div class="feature-card fade-in">
+                <div class="feature-icon">
+                    <span class="material-icons">deck</span>
+                </div>
+                <h3>Private Balcony</h3>
+                <p>Perfect for relaxing or entertaining with outdoor space and fresh air</p>
+            </div>
+            <div class="feature-card fade-in">
+                <div class="feature-icon">
+                    <span class="material-icons">cleaning_services</span>
+                </div>
+                <h3>Optional Cleaning Service</h3>
+                <p>Weekly cleaning services available - R400 full day or R250 half day</p>
             </div>
         </div>
     </section>
 
     <!-- Location Section -->
     <section id="location" class="section section-alt">
-        <h2 class="fade-in">Premier Location</h2>
+        <h2 class="fade-in">PRIME PARKVIEW LOCATION</h2>
         <div class="elegant-grid">
             <div class="content-box fade-in">
-                <h3>Medical Professional's Haven</h3>
-                <p>Strategically positioned for healthcare professionals, with a convenient 20-minute commute to Chris Hani Baragwanath Academic Hospital. The morning and evening journeys flow seamlessly against traffic patterns.</p>
-                <p>Parkview's tree-lined boulevards provide a serene residential atmosphere while maintaining excellent connectivity.</p>
+                <h3>Perfect for Healthcare Professionals</h3>
+                <p>Located in the charming suburb of Parkview, this apartment is strategically positioned just 20 minutes from Chris Hani Baragwanath Academic Hospital. Enjoy a stress-free commute against traffic both in the morning and late afternoon.</p>
+                <p>Parkview is known for its tree-lined streets, excellent security, and peaceful residential atmosphere.</p>
             </div>
             <div class="content-box fade-in">
-                <h3>Urban Sophistication</h3>
-                <p>The renowned Rosebank district lies just 5 minutes away, offering world-class dining, shopping, and cultural experiences. Premium amenities and services are readily accessible.</p>
-                <p>This location represents the perfect synthesis of suburban tranquility and metropolitan convenience.</p>
+                <h3>Everything You Need Nearby</h3>
+                <p>The location offers unmatched convenience with restaurants, petrol stations, and shopping all within easy reach. Rosebank Mall is only 5 minutes away for all your shopping and entertainment needs.</p>
+                <p>Public transport links and major highways provide excellent connectivity to the rest of Johannesburg.</p>
             </div>
         </div>
         <div class="map-container fade-in">
@@ -654,7 +675,7 @@
 
     <!-- Costs Section -->
     <section id="costs" class="section">
-        <h2 class="fade-in">Investment Details</h2>
+        <h2 class="fade-in">RENTAL INFORMATION</h2>
         <div class="content-box fade-in" style="text-align: center; max-width: 600px; margin: 0 auto;">
             <h3 style="font-size: 2.5rem; color: #8B7355; margin-bottom: 1rem;"><span class="material-icons" style="vertical-align: middle; margin-right: 10px; font-size: 2rem;">monetization_on</span>R12,500 Monthly</h3>
             <p style="color: #666; margin-bottom: 3rem; font-size: 1.1rem;">Comprehensive luxury accommodation with all amenities included</p>
@@ -676,23 +697,24 @@
 
     <!-- Contact Section -->
     <section id="contact" class="luxury-contact">
-        <h2 class="fade-in" style="color: white;">Arrange Viewing</h2>
+        <h2 class="fade-in" style="color: white;">GET IN TOUCH</h2>
         <div class="contact-grid">
             <div class="contact-info fade-in">
-                <h3>Private Consultation</h3>
+                <h3>Contact Information</h3>
                 <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px;">email</span> Available upon request</p>
                 <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px;">phone</span> Available upon request</p>
                 <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px;">location_on</span> Parkview, Johannesburg</p>
                 
-                <h3 style="margin-top: 3rem;">Distinguished Clientele</h3>
-                <p>• Healthcare executives and professionals</p>
-                <p>• Corporate leaders and consultants</p>
-                <p>• Those seeking premium furnished accommodation</p>
+                <h3 style="margin-top: 3rem;">Perfect For</h3>
+                <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px; color: #4a4a4a;">check_circle</span>Healthcare professionals at Chris Hani Baragwanath</p>
+                <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px; color: #4a4a4a;">check_circle</span>Working professionals seeking convenience</p>
+                <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px; color: #4a4a4a;">check_circle</span>Anyone wanting fully furnished accommodation</p>
                 
-                <h3 style="margin-top: 3rem;">Exclusive Benefits</h3>
-                <p>• Immediate occupancy available</p>
-                <p>• Professional maintenance service</p>
-                <p>• Prestigious Parkview address</p>
+                <h3 style="margin-top: 3rem;">Key Benefits</h3>
+                <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px; color: #4a4a4a;">home</span>Move-in ready - fully furnished</p>
+                <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px; color: #4a4a4a;">directions_car</span>Stress-free commute against traffic</p>
+                <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px; color: #4a4a4a;">security</span>24-hour security for peace of mind</p>
+                <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px; color: #4a4a4a;">monetization_on</span>All-inclusive pricing with Wi-Fi & parking</p>
             </div>
             <form class="contact-form fade-in" id="contactForm">
                 <div class="form-group">
