--- a/style-b-minimalist.html
+++ b/style-b-minimalist.html
@@ -415,25 +415,25 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Modern Living<br>Redefined</h1>
-            <p>A fully furnished apartment at Parkview Manor, designed for contemporary living</p>
-            <a href="#about" class="cta-button">Explore</a>
+            <h1>FULLY<br>FURNISHED</h1>
+            <p>Premium apartment at Parkview Manor, Parkview - 20 minutes to Chris Hani Baragwanath Hospital</p>
+            <a href="#about" class="cta-button">View Details</a>
         </div>
     </section>
 
     <!-- About Section -->
     <section id="about" class="section">
-        <h2 class="fade-in">Clean. Modern. Furnished.</h2>
+        <h2 class="fade-in">FULLY FURNISHED APARTMENT</h2>
         <div class="about-grid">
             <div class="about-text fade-in">
-                <h3>Minimalist Design</h3>
-                <p>Located at Parkview Manor, this fully furnished apartment embraces clean lines and open spaces. Every element has been carefully curated to create a serene, uncluttered living environment.</p>
-                <p>Just 20 minutes from Chris Hani Baragwanath Academic Hospital, perfect for professionals seeking quality and convenience.</p>
+                <h3>Prime Parkview Location</h3>
+                <p>Located at Parkview Manor in the charming suburb of Parkview, this fully furnished apartment offers the perfect blend of comfort and convenience. Just 20 minutes to Chris Hani Baragwanath Academic Hospital with a stress-free commute against traffic both morning and afternoon.</p>
+                <p>The secure complex features 24-hour guard control, ensuring your peace of mind in this desirable first-floor unit.</p>
             </div>
             <div class="about-text fade-in">
-                <h3>Thoughtful Details</h3>
-                <p>The space features premium furnishings, modern appliances, and abundant natural light. Each room is designed with functionality and aesthetics in perfect balance.</p>
-                <p>24-hour security and covered parking ensure comfort and peace of mind in this sought-after location.</p>
+                <h3>Everything Included</h3>
+                <p>This thoughtfully furnished apartment comes with everything you need for comfortable living. From high-quality furniture to modern appliances, every detail has been considered to provide a premium living experience.</p>
+                <p>The stylish contemporary design features clean lines, premium finishes, and a sophisticated neutral palette that creates the perfect modern living environment.</p>
             </div>
         </div>
         <div class="stats-grid fade-in">
@@ -451,14 +451,14 @@
             </div>
             <div class="stat-item">
                 <span class="stat-number">1st</span>
-                <span>Floor</span>
+                <span>Floor Unit</span>
             </div>
         </div>
     </section>
 
     <!-- Gallery Section -->
     <section id="gallery" class="section section-alt">
-        <h2 class="fade-in">Interior Gallery</h2>
+        <h2 class="fade-in">GALLERY</h2>
         <div class="gallery-grid">
             <div class="gallery-item fade-in">
                 <img src="Pics/PHOTO-2025-08-19-09-04-43.jpg" alt="Master Bedroom">
@@ -483,64 +483,87 @@
 
     <!-- Features Section -->
     <section id="features" class="section">
-        <h2 class="fade-in">What's Included</h2>
+        <h2 class="fade-in">APARTMENT FEATURES</h2>
         <div class="features-grid">
             <div class="feature-item fade-in">
                 <div class="feature-icon">
                     <span class="material-icons">security</span>
                 </div>
                 <h3>24-Hour Security</h3>
-                <p>Round-the-clock security with controlled access for complete peace of mind</p>
+                <p>Secure complex with 24-hour guard control for complete peace of mind</p>
             </div>
             <div class="feature-item fade-in">
                 <div class="feature-icon">
                     <span class="material-icons">bed</span>
                 </div>
-                <h3>Furnished Bedrooms</h3>
-                <p>Two bedrooms with queen beds, built-in storage, and quality linens</p>
+                <h3>2 Furnished Bedrooms</h3>
+                <p>Each with queen-sized beds and built-in cupboards, fully furnished and ready to move in</p>
             </div>
             <div class="feature-item fade-in">
                 <div class="feature-icon">
                     <span class="material-icons">kitchen</span>
                 </div>
-                <h3>Modern Kitchen</h3>
-                <p>Fully equipped with premium appliances and everything needed for cooking</p>
+                <h3>Fully Equipped Kitchen</h3>
+                <p>Oven, stove, microwave, air fryer, fridge, washing machine, and dishwasher included</p>
             </div>
             <div class="feature-item fade-in">
                 <div class="feature-icon">
                     <span class="material-icons">wifi</span>
                 </div>
-                <h3>High-Speed Internet</h3>
-                <p>Uncapped Wi-Fi included - work and stream without limitations</p>
+                <h3>Uncapped Wi-Fi Included</h3>
+                <p>High-speed internet connection included in rental - stay connected without extra costs</p>
             </div>
             <div class="feature-item fade-in">
                 <div class="feature-icon">
                     <span class="material-icons">local_parking</span>
                 </div>
-                <h3>Covered Parking</h3>
-                <p>Dedicated roofed parking bay plus ample visitor parking spaces</p>
+                <h3>Roofed Parking Bay</h3>
+                <p>One covered parking bay included plus ample visitor parking available</p>
             </div>
             <div class="feature-item fade-in">
                 <div class="feature-icon">
                     <span class="material-icons">power</span>
                 </div>
-                <h3>Backup Power</h3>
-                <p>Inverter system ensures uninterrupted power supply during outages</p>
+                <h3>Backup Power System</h3>
+                <p>Inverter backup power system ensures uninterrupted electricity supply</p>
+            </div>
+            <div class="feature-item fade-in">
+                <div class="feature-icon">
+                    <span class="material-icons">bathtub</span>
+                </div>
+                <h3>2 Modern Bathrooms</h3>
+                <p>One en-suite, one adjacent to second bedroom - both with contemporary fittings</p>
+            </div>
+            <div class="feature-item fade-in">
+                <div class="feature-icon">
+                    <span class="material-icons">deck</span>
+                </div>
+                <h3>Private Balcony</h3>
+                <p>Perfect for relaxing or entertaining with outdoor space and fresh air</p>
+            </div>
+            <div class="feature-item fade-in">
+                <div class="feature-icon">
+                    <span class="material-icons">cleaning_services</span>
+                </div>
+                <h3>Optional Cleaning Service</h3>
+                <p>Weekly cleaning services available - R400 full day or R250 half day</p>
             </div>
         </div>
     </section>
 
     <!-- Location Section -->
     <section id="location" class="section section-alt">
-        <h2 class="fade-in">Prime Location</h2>
+        <h2 class="fade-in">PRIME PARKVIEW LOCATION</h2>
         <div class="about-grid">
             <div class="about-text fade-in">
-                <h3>Healthcare Professional Haven</h3>
-                <p>Strategically located just 20 minutes from Chris Hani Baragwanath Academic Hospital. The morning and afternoon commute flows against traffic, making your daily journey stress-free.</p>
+                <h3>Perfect for Healthcare Professionals</h3>
+                <p>Located in the charming suburb of Parkview, this apartment is strategically positioned just 20 minutes from Chris Hani Baragwanath Academic Hospital. Enjoy a stress-free commute against traffic both in the morning and late afternoon.</p>
+                <p>Parkview is known for its tree-lined streets, excellent security, and peaceful residential atmosphere.</p>
             </div>
             <div class="about-text fade-in">
-                <h3>Urban Convenience</h3>
-                <p>Rosebank Mall is 5 minutes away, with restaurants, shopping, and entertainment at your doorstep. The leafy Parkview suburb offers tranquility while keeping you connected to the city.</p>
+                <h3>Everything You Need Nearby</h3>
+                <p>The location offers unmatched convenience with restaurants, petrol stations, and shopping all within easy reach. Rosebank Mall is only 5 minutes away for all your shopping and entertainment needs.</p>
+                <p>Public transport links and major highways provide excellent connectivity to the rest of Johannesburg.</p>
             </div>
         </div>
         <div class="map-container fade-in">
@@ -561,7 +584,7 @@
 
     <!-- Costs Section -->
     <section id="costs" class="section">
-        <h2 class="fade-in">Transparent Pricing</h2>
+        <h2 class="fade-in">RENTAL INFORMATION</h2>
         <div class="card fade-in" style="text-align: center;">
             <h3 style="font-size: 2rem; font-weight: 300; margin-bottom: 1rem;"><span class="material-icons" style="vertical-align: middle; margin-right: 10px;">attach_money</span>R12,500 per month</h3>
             <p style="color: #666; margin-bottom: 2rem;">Everything included - no hidden fees</p>
@@ -589,10 +612,16 @@
                 <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px;">phone</span> Available upon inquiry</p>
                 <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px;">location_on</span> Parkview, Johannesburg</p>
                 
-                <h3 style="margin-top: 3rem;">Ideal For</h3>
-                <p>• Healthcare professionals</p>
-                <p>• Working professionals</p>
-                <p>• Those seeking furnished accommodation</p>
+                <h3 style="margin-top: 3rem;">Perfect For</h3>
+                <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px; color: #4a4a4a;">check_circle</span>Healthcare professionals at Chris Hani Baragwanath</p>
+                <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px; color: #4a4a4a;">check_circle</span>Working professionals seeking convenience</p>
+                <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px; color: #4a4a4a;">check_circle</span>Anyone wanting fully furnished accommodation</p>
+                
+                <h3 style="margin-top: 3rem;">Key Benefits</h3>
+                <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px; color: #4a4a4a;">home</span>Move-in ready - fully furnished</p>
+                <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px; color: #4a4a4a;">directions_car</span>Stress-free commute against traffic</p>
+                <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px; color: #4a4a4a;">security</span>24-hour security for peace of mind</p>
+                <p><span class="material-icons" style="vertical-align: middle; margin-right: 5px; color: #4a4a4a;">monetization_on</span>All-inclusive pricing with Wi-Fi & parking</p>
             </div>
             <form class="contact-form fade-in" id="contactForm">
                 <div class="form-group">
